--- a/index.html
+++ b/index.html
@@ -353,10 +353,9 @@
                       <p  style="color:#333">2017-2018（深圳市仕瑞达自动化设备有限公司）</p>
                   </dd>
                 </dl>
-                <dl style="height: 170px">
-                  <dt style="margin-bottom:5px;"><span class="glyphicon glyphicon-bookmark" aria-hidden="true" style="color: #fff;background: #3B627F;font-size: 24px;text-align: center;line-height: 37px;height: 37px;width: 37px;border-radius: 50%;margin-right:10px;display:block;float:left;"></span><h3 class="pcComtentRightTitel">工作经历</h3></dt>
+                <dl style="height: 140px">
+                  <dt style="margin-bottom:5px;"><span class="glyphicon glyphicon-bookmark" aria-hidden="true" style="color: #fff;background: #3B627F;font-size: 24px;text-align: center;line-height: 37px;height: 37px;width: 37px;border-radius: 50%;margin-right:10px;display:block;float:left;"></span><h3 class="pcComtentRightTitel">工作职责</h3></dt>
                   <dd class="pcComtentRightTitelContent" style="text-align:left;float:" >
-                      <p style="color:#333;height:33px;line-height: 44px">工作职责</p>
                       <p  style="color:#333">进入爱唯视后，在公司的前端部门，负责网页开发，维护，优化。</p>
                       <p  style="color:#333">仕瑞达，在公司的前端部门，负责网页，系统，产品需求，开发，维护，优化。推进前后端协同开发，产品的更新迭代</p>
                   </dd>
