--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                   <dt><span class="glyphicon glyphicon-bookmark" aria-hidden="true" style="color: #fff;background: #3B627F;font-size: 24px;text-align: center;line-height: 37px;height: 37px;width: 37px;border-radius: 50%;margin-right:10px;display:block;float:left;"></span><h3 class="pcComtentRightTitel">求职意向<span style="display: inline-block; float: right;font-size: 12px; color: #3B627F;">访问<a href="http://bluelee888.cn">http://bluelee888.cn/</a>查看个人简历</span></h3>
                   </dt>
                   <dd class="pcComtentRightTitelContent" style="padding-left:47px;">
-                    <span class="glyphicon glyphicon-hand-right" aria-hidden="true" style="margin-right:10px"></span><span style="margin-right:42px">信利</span>
+                    <span class="glyphicon glyphicon-hand-right" aria-hidden="true" style="margin-right:10px"></span><span style="margin-right:42px">汕尾信利</span>
                     <span class="glyphicon glyphicon-tasks" aria-hidden="true" style="margin-right:10px"></span><span style="margin-right:42px">全职</span>
 <!--                     <span class="glyphicon glyphicon glyphicon-map-marker" aria-hidden="true" style="margin-right:10px"></span><span style="margin-right:42px">汕尾</span>
                     <span class="glyphicon glyphicon glyphicon-yen" aria-hidden="true" style="margin-right:10px"></span><span style="margin-right:42px">6k-8k</span> -->
@@ -348,9 +348,9 @@
                 <dl>
                   <dt style="margin-bottom:5px;"><span class="glyphicon glyphicon-bookmark" aria-hidden="true" style="color: #fff;background: #3B627F;font-size: 24px;text-align: center;line-height: 37px;height: 37px;width: 37px;border-radius: 50%;margin-right:10px;display:block;float:left;"></span><h3 class="pcComtentRightTitel">工作经历</h3></dt>
                   <dd class="pcComtentRightTitelContent" style="text-align:left;float:" >
-                  <p  style="color:#333">2015（以前从事其他工作）</p>
-                      <p  style="color:#333">2015-2017（广东爱唯视医疗科技有限公司）</p>
-                      <p  style="color:#333">2017-2018（深圳市仕瑞达自动化设备有限公司）</p>
+                      <p style="color:#333">2015（以前从事其他工作）</p>
+                      <p style="color:#333">2015-2017（广东爱唯视医疗科技有限公司）</p>
+                      <p style="color:#333">2017-2018（深圳市仕瑞达自动化设备有限公司）</p>
                   </dd>
                 </dl>
                 <dl style="height: 140px">
@@ -407,34 +407,37 @@
                         <div id="pcComtentLeftFoot">
                           <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-plane" aria-hidden="true" style="margin-right:10px"></span>工作经历</h4>
                           <div style="margin-top: 16px;">
-                            <p>2015年以前从事其他行业</p>
-                            <p  2015-至今（从事web前端工作3年）</p>
-                            <p>广东爱唯视医疗科技有限公司</p>
+                            <p>2015（以前从事其他工作）</p>
+                            <p>2015-2017（广东爱唯视医疗科技有限公司）</p>
+                            <p>2017-2018（深圳市仕瑞达自动化设备有限公司）</p>
                           </div>
                         </div>
                         <div id="pcComtentLeftFoot">
                           <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-plane" aria-hidden="true" style="margin-right:10px"></span>项目职责</h4>
                           <div style="margin-top: 16px;text-align:left;padding: 0 37px;">
-                            进入爱唯视后，在公司的前端部门，负责网页开发，维护，优化。公司前期使用前端页面使用Jquery+bootstrap,后台页面用jqueryeasyui,开发工具是eclipse。公司中期，单页应用新起，微信端页面使用weiui+vue.js,没有使用vue.js全家桶，公司架构师讨论vue生态不健全，路由自己写框架，后台页面jqueryeasyui,前端开发工具Sublime，公司后期，基本使用vue.js全家桶，又重组公司项目，后台页面改为elemnet-ui+vue.js全家桶，微信端页面使用weiui+vue.js全家桶</p>,前端开发工Atom
+                            1：进入爱唯视后，在公司的前端部门，负责网页开发，维护，优化。</br>
+                            2: 仕瑞达，在公司的前端部门，负责网页，系统，产品需求，开发，维护，优化。推进前后端协同开发，产品的更新迭代
                           </div>
                         </div>
                         <div id="pcComtentLeftFoot">
                           <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-cd" aria-hidden="true" style="margin-right:10px"></span>项目经历</h4>
                           <div style="margin-top: 16px;">
-                            <h5>广东爱唯视医疗科技有限公司</h5>
+                            <h5 style="text-align: left;padding-left: 32px;    font-weight: bold;">广东爱唯视医疗科技有限公司</h5>
                             <p>http://www.eyesws.com/#/main(微信公众号)</p>
                             <p>http://sg.eyesws.com/report/（检查报告移动版）</p>
                             <p>http://store.test.eyesws.com/#!/login（存管理系统）</p>
+                              <h5 style="text-align: left;padding-left: 32px;font-weight: bold;">深圳市仕瑞达自动化设备有限公司（在线项目）</h5>
+                              <p>http://www.srdfaa.com/(深圳市创芯人官网)</p>
+                              <p>http://www.cxrgc.com/（深圳市仕瑞达官网）</p>
+                              <p>http://mes.cxrgc.com:81/login（创芯工厂系统）</p>
                           </div>
                         </div>
 
                         <div id="pcComtentLeftFoot">
                           <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-user" aria-hidden="true" style="margin-right:10px"></span>求职意向</h4>
                           <div style="margin-top: 16px;">
-                            <p style="text-indent:18px"><span class="glyphicon glyphicon-hand-right" aria-hidden="true" style="margin-right:15px"></span>web前端工程师</p>
-                            <p style="text-indent:18px"><span class="glyphicon glyphicon-map-marker" aria-hidden="true" style="margin-right:15px"></span>深圳</p>
+                            <p style="text-indent:18px"><span class="glyphicon glyphicon-map-marker" aria-hidden="true" style="margin-right:15px"></span>汕尾信利</p>
                             <p style="text-indent:18px"><span class="glyphicon glyphicon-tasks" aria-hidden="true" style="margin-right:15px"></span>全职</p>
-                            <p style="text-indent:18px"><span class="glyphicon glyphicon-yen" aria-hidden="true" style="margin-right:15px"></span>6k-8k</p>
                           </div>
                         </div>
                         <div id="pcComtentLeftCenter">
