--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -339,7 +340,7 @@
                   <dt><span class="glyphicon glyphicon-bookmark" aria-hidden="true" style="color: #fff;background: #3B627F;font-size: 24px;text-align: center;line-height: 37px;height: 37px;width: 37px;border-radius: 50%;margin-right:10px;display:block;float:left;"></span><h3 class="pcComtentRightTitel">求职意向<span style="display: inline-block; float: right;font-size: 12px; color: #3B627F;">访问<a href="http://bluelee888.cn">http://bluelee888.cn/</a>查看个人简历</span></h3>
                   </dt>
                   <dd class="pcComtentRightTitelContent" style="padding-left:47px;">
-                    <span class="glyphicon glyphicon-hand-right" aria-hidden="true" style="margin-right:10px"></span><span style="margin-right:42px">汕尾信利</span>
+                    <span class="glyphicon glyphicon-hand-right" aria-hidden="true" style="margin-right:10px"></span><span style="margin-right:42px">深圳</span>
                     <span class="glyphicon glyphicon-tasks" aria-hidden="true" style="margin-right:10px"></span><span style="margin-right:42px">全职</span>
 <!--                     <span class="glyphicon glyphicon glyphicon-map-marker" aria-hidden="true" style="margin-right:10px"></span><span style="margin-right:42px">汕尾</span>
                     <span class="glyphicon glyphicon glyphicon-yen" aria-hidden="true" style="margin-right:10px"></span><span style="margin-right:42px">6k-8k</span> -->
@@ -436,7 +437,7 @@
                         <div id="pcComtentLeftFoot">
                           <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-user" aria-hidden="true" style="margin-right:10px"></span>求职意向</h4>
                           <div style="margin-top: 16px;">
-                            <p style="text-indent:18px"><span class="glyphicon glyphicon-map-marker" aria-hidden="true" style="margin-right:15px"></span>汕尾信利</p>
+                            <p style="text-indent:18px"><span class="glyphicon glyphicon-map-marker" aria-hidden="true" style="margin-right:15px"></span>深圳</p>
                             <p style="text-indent:18px"><span class="glyphicon glyphicon-tasks" aria-hidden="true" style="margin-right:15px"></span>全职</p>
                           </div>
                         </div>
