--- a/index.html
+++ b/index.html
@@ -1,25 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">    
-    <title>我的前端</title>
-    <link rel="icon" href="./img/new_favicon.png">
-    <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
-    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!--fav-->
-    <script  src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
-    <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-</head>
-
-<body>
-    <div id="app"></div>
-    <script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
-    <noscript>
-        创芯人科技有限公司，专注于从事各类精密五金机械零件加工，自动化设备的设计与制作，为客户提供小批量、多种类的机械定制产品一站式加工平台，累计服务过3万多商家。我们致力于--让机加产业更简单，我们有完善的机械加工设备，专业的机械加工技术人员，提供小批量，多种类的机械加工定制产品；生产前制定详细的工艺路线和生产计划，加工过程中实时系统跟进+优化调度算法，专业的项目管理团队实时跟踪生产进度，确保按期交付产品。
-    </noscript>
-</body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=UTF-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><title>我的前端</title><link rel=icon href=./img/new_favicon.png><link rel=stylesheet href=https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css integrity=sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u crossorigin=anonymous><script src=http://libs.baidu.com/jquery/1.9.1/jquery.min.js></script><script src=https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js integrity=sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa crossorigin=anonymous></script></head><body><div id=app></div><script src="http://pv.sohu.com/cityjson?ie=utf-8"></script><noscript>创芯人科技有限公司，专注于从事各类精密五金机械零件加工，自动化设备的设计与制作，为客户提供小批量、多种类的机械定制产品一站式加工平台，累计服务过3万多商家。我们致力于--让机加产业更简单，我们有完善的机械加工设备，专业的机械加工技术人员，提供小批量，多种类的机械加工定制产品；生产前制定详细的工艺路线和生产计划，加工过程中实时系统跟进+优化调度算法，专业的项目管理团队实时跟踪生产进度，确保按期交付产品。</noscript><script type=text/javascript src=js/newmodule-269fb691f143409b2a97.js></script><script type=text/javascript src=js/app-269fb691f143409b2a97.js></script><script type=text/javascript src=js/index-269fb691f143409b2a97.js></script></body></html>
