--- a/index.html
+++ b/index.html
@@ -1,1 +1,172 @@
-<!DOCTYPE html><html lang=en><head><meta charset=UTF-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><title>世界杯</title></head><body><div id=app></div><script src="http://pv.sohu.com/cityjson?ie=utf-8"></script><noscript>创芯人科技有限公司，专注于从事各类精密五金机械零件加工，自动化设备的设计与制作，为客户提供小批量、多种类的机械定制产品一站式加工平台，累计服务过3万多商家。我们致力于--让机加产业更简单，我们有完善的机械加工设备，专业的机械加工技术人员，提供小批量，多种类的机械加工定制产品；生产前制定详细的工艺路线和生产计划，加工过程中实时系统跟进+优化调度算法，专业的项目管理团队实时跟踪生产进度，确保按期交付产品。</noscript><script type=text/javascript src=js/newmodule-775cd9689e6c668aac85.js></script><script type=text/javascript src=js/app-775cd9689e6c668aac85.js></script><script type=text/javascript src=js/index-775cd9689e6c668aac85.js></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">    
+    <title>世界杯</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="third/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/common.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/index.css" />
+</head>
+<body>
+    <div id="header">
+        <div id="header_top">
+            <div id="header_img">
+                <img src="img/user_light.png"/>
+            </div>
+            <span>头条</span>
+        </div>
+        <div id="header_nav">
+            <ul>
+                <li>热门</li>
+                <li>世界杯</li>
+                <li>视屏</li>
+                <li>中超</li>
+                <li></li>
+            </ul>
+        </div>
+    </div>
+    <div id="index_content" style="color: #333">
+        <div id="myCarousel" class="carousel slide">
+            <!-- 轮播（Carousel）指标 -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>   
+            <!-- 轮播（Carousel）项目 -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img src="img/nav1.png" alt="First slide">
+                    <div class="carousel-caption">标题 1</div>
+                </div>
+                <div class="item">
+                    <img src="img/nav1.png" alt="Second slide">
+                    <div class="carousel-caption">标题 2</div>
+                </div>
+                <div class="item">
+                    <img src="img/nav1.png" alt="Third slide">
+                    <div class="carousel-caption">标题 3</div>
+                </div>
+            </div>
+            <!-- 轮播（Carousel）导航 -->
+            <!-- <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a> -->
+        </div>
+        <div class="index_content_list">
+            <div class="indexlist">
+                <div class="media">
+                    <div class="media-left">
+                        <img class="media-object" src="img/test.jpg" alt="..." style="width:100px">
+                    </div>
+                    <div class="media-body">
+                        <h4 class="list_title">球不是这样踢的,球不是这样踢的,球不是这样踢的,</h4>
+                        <div class="list_left_bottom">
+                                <div class="list_titel">足球战报</div>
+                                <div class="list_comments">评论</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="index_content_list">
+            <div class="indexlist">
+                <div class="media">
+                    <div class="media-left">
+                        <img class="media-object" src="img/test.jpg" alt="..." style="width:100px">
+                    </div>
+                    <div class="media-body">
+                        <h4 class="list_title">球不是这样踢的,球不是这样踢的,球不是这样踢的,</h4>
+                        <div class="list_left_bottom">
+                                <div class="list_titel">足球战报</div>
+                                <div class="list_comments">评论</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> 
+        <div class="index_content_list">
+                <div class="indexlist">
+                    <div class="media">
+                        <div class="media-left">
+                            <img class="media-object" src="img/test.jpg" alt="..." style="width:100px">
+                        </div>
+                        <div class="media-body">
+                            <h4 class="list_title">球不是这样踢的,球不是这样踢的,球不是这样踢的,</h4>
+                            <div class="list_left_bottom">
+                                    <div class="list_titel">足球战报</div>
+                                    <div class="list_comments">评论</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> 
+            <div class="index_content_list">
+                    <div class="indexlist">
+                        <div class="media">
+                            <div class="media-left">
+                                <img class="media-object" src="img/test.jpg" alt="..." style="width:100px">
+                            </div>
+                            <div class="media-body">
+                                <h4 class="list_title">球不是这样踢,球不是这样踢的,</h4>
+                                <div class="list_left_bottom">
+                                        <div class="list_titel">足球战报</div>
+                                        <div class="list_comments">评论</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
+        <div>
+        </div>
+    </div>
+    <div id="footer">
+        <ul id="footer_content" style="border-top:1px solid #ccc; ">
+            <li class="footer_list">
+                <a>
+                    <img src="img/caidan1.png">
+                    <span>头条</span>
+                </a>
+            </li>
+            <li class="footer_list">
+                <a>
+                    <img src="img/caidan2.png" style="width: 19px">
+                    <span>榜单</span>
+                </a>
+            </li>
+            <li class="footer_list"style="position: relative;top:-30px">
+                <a>
+                    <img src="img/caidan3.png" style="width: 48px">
+                    <span>竞赛</span>
+                </a>
+            </li>
+            <li class="footer_list">
+                <a>
+                    <img src="img/caidan4.png" style="width: 19px">
+                    <span>积分商城</span>
+                </a>                
+            </li>
+            <li class="footer_list">
+                <a>
+                    <img src="img/caidan5.png" style="width: 18px">
+                    <span>我的</span>
+                </a>                
+            </li>
+        </ul>
+    </div>
+</body>
+</html>
+<script src="third/jquery/jquery.min.js"></script>
+<script src="third/jquery/bootstrap.min.js"></script>
+<script src="third/jquery/bootstrap.min.js"></script>
+<script src="third/swiper/swiper.min.js"></script>
+<script src="js/index.js"></script>
