--- a/news.html
+++ b/news.html
@@ -36,7 +36,7 @@
         <textarea rows="1" placeholder="我来说两句" onfocus="light.news.getSubmitBtnClick()"  onblur="light.news.gotalkLsitBtnClick()"></textarea>
          <div id="talks">
             <a href="talklist.html" class="gotalklist"> 评论1</a>
-            <span class="speaksend">提交</span>
+            <span class="speaksend" onclick="speaksendClick()">提交</span>
          </div>
     </div>
 </body>
