--- a/talklist.html
+++ b/talklist.html
@@ -34,17 +34,17 @@
         </li>
 
         <li class="media my_list">
-                <div class="media-left" style="min-width: 100px;">
-                    <div class="portrait">
-                        <img class="media-object"src="img/guo1.png" alt="...">
-                    </div>
+            <div class="media-left" style="min-width: 100px;">
+                <div class="portrait">
+                    <img class="media-object"src="img/guo1.png" alt="...">
                 </div>
-                <div class="media-body">
-                <h4 class="media-heading talks_top">球要这样踢</h4>
-                <div class="talks_time">2018-06-11 10:00:26</div>
-                <h4 class="talks_text">Media heading</h4>
-                </div>
-            </li>
+            </div>
+            <div class="media-body">
+            <h4 class="media-heading talks_top">球要这样踢</h4>
+            <div class="talks_time">2018-06-11 10:00:26</div>
+            <h4 class="talks_text">Media heading</h4>
+            </div>
+        </li>
             
          <li class="media my_list">
             <div class="media-left" style="min-width: 100px;">
@@ -60,47 +60,49 @@
         </li>
         
         <li class="media my_list">
-                <div class="media-left" style="min-width: 100px;">
-                    <div class="portrait">
-                        <img class="media-object"src="img/guo1.png" alt="...">
-                    </div>
+            <div class="media-left" style="min-width: 100px;">
+                <div class="portrait">
+                    <img class="media-object"src="img/guo1.png" alt="...">
                 </div>
-                <div class="media-body">
-                <h4 class="media-heading talks_top">球要这样踢</h4>
-                <div class="talks_time">2018-06-11 10:00:26</div>
-                <h4 class="talks_text">Media heading</h4>
+            </div>
+            <div class="media-body">
+            <h4 class="media-heading talks_top">球要这样踢</h4>
+            <div class="talks_time">2018-06-11 10:00:26</div>
+            <h4 class="talks_text">Media heading</h4>
+            </div>
+        </li>        
+        <li class="media my_list">
+            <div class="media-left" style="min-width: 100px;">
+                <div class="portrait">
+                    <img class="media-object"src="img/guo1.png" alt="...">
                 </div>
-            </li>        
-            <li class="media my_list">
-                    <div class="media-left" style="min-width: 100px;">
-                        <div class="portrait">
-                            <img class="media-object"src="img/guo1.png" alt="...">
-                        </div>
-                    </div>
-                    <div class="media-body">
-                    <h4 class="media-heading talks_top">球要这样踢</h4>
-                    <div class="talks_time">2018-06-11 10:00:26</div>
-                    <h4 class="talks_text">Media heading</h4>
-                    </div>
-                </li>  
+            </div>
+            <div class="media-body">
+            <h4 class="media-heading talks_top">球要这样踢</h4>
+            <div class="talks_time">2018-06-11 10:00:26</div>
+            <h4 class="talks_text">Media heading</h4>
+            </div>
+        </li>  
 
-                <li class="media my_list">
-                        <div class="media-left" style="min-width: 100px;">
-                            <div class="portrait">
-                                <img class="media-object"src="img/guo1.png" alt="...">
-                            </div>
-                        </div>
-                        <div class="media-body">
-                        <h4 class="media-heading talks_top">球要这样踢</h4>
-                        <div class="talks_time">2018-06-11 10:00:26</div>
-                        <h4 class="talks_text">Media heading</h4>
-                        </div>
-                    </li>  
-
+        <li class="media my_list">
+            <div class="media-left" style="min-width: 100px;">
+                <div class="portrait">
+                    <img class="media-object"src="img/guo1.png" alt="...">
+                </div>
+            </div>
+            <div class="media-body">
+            <h4 class="media-heading talks_top">球要这样踢</h4>
+            <div class="talks_time">2018-06-11 10:00:26</div>
+            <h4 class="talks_text">Media heading</h4>
+            </div>
+        </li>  
     </ul>       
     </div>
     <div id="footer">
         <textarea rows="1" placeholder="我来说两句"></textarea>
+        <div id="talks">
+            <span class="speaksend" onclick="speaksendClick()">提交</span>
+        </div>
     </div>
 </body>
 </html>
