--- a/news.html
+++ b/news.html
@@ -33,7 +33,7 @@
         </div>
     </div>
     <div id="footer">
-        <textarea rows="1" placeholder="我来说两句" onfocus="light.news.getSubmitBtnClick()"  onblur="light.news.gotalkLsitBtnClick()"></textarea>
+        <textarea rows="1" placeholder="我来说两句" onfocus="getSubmitBtnClick()"  onblur="gotalkLsitBtnClick()"></textarea>
          <div id="talks">
             <a href="talklist.html" class="gotalklist"> 评论1</a>
             <span class="speaksend" onclick="speaksendClick()">提交</span>
