--- a/quiz.html
+++ b/quiz.html
@@ -14,7 +14,21 @@
 <body>
     <div id="otherheader"></div>
     <div id="quiz_top">
-        <div class="row">
+        <div class="quiz_top_group">
+            <img class="media-object" src="img/user_img.png" alt="...">
+        </div>
+        <div class="quiz_top_group">
+            <h4 class="my_username">羊羊羊</h4>
+            <p class="my_lv">LvO</p>
+        </div>
+        <div class="fr" style="margin-right:15px">
+            <div id="quiz_top_right">
+                <img src="img/momey.png">
+                <span>0</span>
+                <img src="img/add.png">
+            </div>            
+        </div>
+        <!-- <div class="row">
             <div class="col-xs-7">
                 <div class="media my_media">
                     <div class="media-left media-middle">
@@ -33,7 +47,7 @@
                     <img src="img/add.png">
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     <div style="clear: both;">
         <div class="swiper-container">
