--- a/ranking.html
+++ b/ranking.html
@@ -25,21 +25,22 @@
     <div id="victory">
         <div class="row ranking_titel">
             <div class="col-xs-2" style="padding: 0"><span class="my_ranking_top">排名</span></div>
-            <div class="col-xs-7">玩家</div>
-            <div class="col-xs-3">积分</div>
+            <div class="col-xs-3">玩家</div>
+            <div class="col-xs-3">　胜/总</div>
+            <div class="col-xs-4">近30天胜率</div>
         </div>
         <div class="row ranking_my_list">
-            <div class="col-xs-2 my-text-center">1</div>
-            <div class="col-xs-7"><img class="my_top_img" src="img/my_top.png"/>胜率排行</div>
-            <div class="col-xs-3">123</div>
-        </div>          
-        <div class="ranking_list">
-            <div class="row ranking_my_list">
-                <div class="col-xs-2 my-text-center">1</div>
-                <div class="col-xs-7"><img class="my_top_img" src="img/my_top.png"/>胜率排行</div>
-                <div class="col-xs-3">123</div>
-            </div> 
+            <div class="col-xs-2 my-text-center" >100</div>
+            <div class="col-xs-4" style="padding: 0;"><img class="my_top_img" src="img/my_top.png"/>胜率排行</div>
+            <div class="col-xs-2">98/100</div>
+            <div class="col-xs-3">　99.99%</div>
         </div>
+        <div class="row ranking_my_list">
+            <div class="col-xs-2 my-text-center" >100</div>
+            <div class="col-xs-4" style="padding: 0;"><img class="my_top_img" src="img/my_top.png"/>胜率排行</div>
+            <div class="col-xs-2">98/100</div>
+            <div class="col-xs-3">　99.99%</div>
+        </div>   
     </div>
 
     <div id="integral">
