--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		    </div>
 		</div>                
     </div>
-    <div style="position: fixed;bottom:60px;text-align:center;width:100%;display: none" class="weui-loadmore" id="load">
+    <div class="weui-loadmore" id="load">
         <i class="weui-loading"></i>
         <span class="weui-loadmore__tips">正在加载</span>
     </div>
