--- a/index.html
+++ b/index.html
@@ -13,86 +13,89 @@
 </head>
 <body>
     <div id="header"></div>
-    <div class="index_page">
-        <div class="myswiper" style=" margin-top: 90px;">
-            <div class="swiper-container">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="img/nav1.png" alt="First slide" style="width: 100%;"></div>
-                    <div class="swiper-slide"><img src="img/nav1.png" alt="First slide" style="width: 100%;"></div>
-                    <div class="swiper-slide"><img src="img/nav1.png" alt="First slide" style="width: 100%;"> </div>
-                    <div class="swiper-slide"><img src="img/nav1.png" alt="First slide" style="width: 100%;"></div>
+    <div id="index_page_conent">
+
+        <div class="index_page">
+            <div class="myswiper">
+                <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide"><img src="img/nav1.png" alt="First slide" style="width: 100%;"></div>
+                        <div class="swiper-slide"><img src="img/nav1.png" alt="First slide" style="width: 100%;"></div>
+                        <div class="swiper-slide"><img src="img/nav1.png" alt="First slide" style="width: 100%;"> </div>
+                        <div class="swiper-slide"><img src="img/nav1.png" alt="First slide" style="width: 100%;"></div>
+                    </div>
+                    <!-- <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div> -->
+                    <div class="swiper-pagination"></div>
                 </div>
-                <!-- <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div> -->
-                <div class="swiper-pagination"></div>
             </div>
+            <div class="weui-cell">
+                <div class="weui-cell__hd" style="position: relative;margin-right: 10px;">
+                    <img src="img/test.jpg" style="width: 80px;display: block">
+                </div>
+                <div class="weui-cell__bd">
+                    <p style="margin-bottom:10px;">天下足球天下足球天下足球天下足球天下足球天下足球</p>
+                    <p style="font-size: 13px;color: #888888;" class="grand">
+                        <span>足球战报</span><span>评论1</span>
+                    </p>
+                </div>
+            </div>
+            <div class="weui-cell">
+                <div class="weui-cell__hd" style="position: relative;margin-right: 10px;">
+                    <img src="img/test.jpg" style="width: 80px;display: block">
+                </div>
+                <div class="weui-cell__bd">
+                    <p style="margin-bottom:10px">天下足球</p>
+                    <p style="font-size: 13px;color: #888888;"class="grand">
+                        <span>足球战报</span><span>评论2</span>
+                    </p>
+                </div>
+            </div>
+            <div class="weui-cell">
+                <div class="weui-cell__hd" style="position: relative;margin-right: 10px;">
+                    <img src="img/test.jpg" style="width: 80px;display: block">
+                </div>
+                <div class="weui-cell__bd">
+                    <p style="margin-bottom:10px;">天下足球天下足球天下足球天下足球天下足球天下足球</p>
+                    <p style="font-size: 13px;color: #888888;" class="grand">
+                        <span>足球战报</span><span>评论1</span>
+                    </p>
+                </div>
+            </div>
+            <div class="weui-cell">
+                <div class="weui-cell__hd" style="position: relative;margin-right: 10px;">
+                    <img src="img/test.jpg" style="width: 80px;display: block">
+                </div>
+                <div class="weui-cell__bd">
+                    <p style="margin-bottom:10px">天下足球</p>
+                    <p style="font-size: 13px;color: #888888;"class="grand">
+                        <span>足球战报</span><span>评论2</span>
+                    </p>
+                </div>
+            </div>
+            <div class="weui-cell">
+                <div class="weui-cell__hd" style="position: relative;margin-right: 10px;">
+                    <img src="img/test.jpg" style="width: 80px;display: block">
+                </div>
+                <div class="weui-cell__bd">
+                    <p style="margin-bottom:10px;">天下足球天下足球天下足球天下足球天下足球天下足球</p>
+                    <p style="font-size: 13px;color: #888888;" class="grand">
+                        <span>足球战报</span><span>评论1</span>
+                    </p>
+                </div>
+            </div>
+            <div class="weui-cell">
+                <div class="weui-cell__hd" style="position: relative;margin-right: 10px;">
+                    <img src="img/test.jpg" style="width: 80px;display: block">
+                </div>
+                <div class="weui-cell__bd">
+                    <p style="margin-bottom:10px">天下足球</p>
+                    <p style="font-size: 13px;color: #888888;"class="grand">
+                        <span>足球战报</span><span>评论2</span>
+                    </p>
+                </div>
+            </div>                
         </div>
-		<div class="weui-cell">
-		    <div class="weui-cell__hd" style="position: relative;margin-right: 10px;">
-		        <img src="img/test.jpg" style="width: 80px;display: block">
-		    </div>
-		    <div class="weui-cell__bd">
-		        <p style="margin-bottom:10px;">天下足球天下足球天下足球天下足球天下足球天下足球</p>
-		        <p style="font-size: 13px;color: #888888;" class="grand">
-		        	<span>足球战报</span><span>评论1</span>
-		        </p>
-		    </div>
-		</div>
-		<div class="weui-cell">
-		    <div class="weui-cell__hd" style="position: relative;margin-right: 10px;">
-		        <img src="img/test.jpg" style="width: 80px;display: block">
-		    </div>
-		    <div class="weui-cell__bd">
-		        <p style="margin-bottom:10px">天下足球</p>
-		        <p style="font-size: 13px;color: #888888;"class="grand">
-		        	<span>足球战报</span><span>评论2</span>
-		        </p>
-		    </div>
-        </div>
-		<div class="weui-cell">
-		    <div class="weui-cell__hd" style="position: relative;margin-right: 10px;">
-		        <img src="img/test.jpg" style="width: 80px;display: block">
-		    </div>
-		    <div class="weui-cell__bd">
-		        <p style="margin-bottom:10px;">天下足球天下足球天下足球天下足球天下足球天下足球</p>
-		        <p style="font-size: 13px;color: #888888;" class="grand">
-		        	<span>足球战报</span><span>评论1</span>
-		        </p>
-		    </div>
-		</div>
-		<div class="weui-cell">
-		    <div class="weui-cell__hd" style="position: relative;margin-right: 10px;">
-		        <img src="img/test.jpg" style="width: 80px;display: block">
-		    </div>
-		    <div class="weui-cell__bd">
-		        <p style="margin-bottom:10px">天下足球</p>
-		        <p style="font-size: 13px;color: #888888;"class="grand">
-		        	<span>足球战报</span><span>评论2</span>
-		        </p>
-		    </div>
-        </div>
-		<div class="weui-cell">
-		    <div class="weui-cell__hd" style="position: relative;margin-right: 10px;">
-		        <img src="img/test.jpg" style="width: 80px;display: block">
-		    </div>
-		    <div class="weui-cell__bd">
-		        <p style="margin-bottom:10px;">天下足球天下足球天下足球天下足球天下足球天下足球</p>
-		        <p style="font-size: 13px;color: #888888;" class="grand">
-		        	<span>足球战报</span><span>评论1</span>
-		        </p>
-		    </div>
-		</div>
-		<div class="weui-cell">
-		    <div class="weui-cell__hd" style="position: relative;margin-right: 10px;">
-		        <img src="img/test.jpg" style="width: 80px;display: block">
-		    </div>
-		    <div class="weui-cell__bd">
-		        <p style="margin-bottom:10px">天下足球</p>
-		        <p style="font-size: 13px;color: #888888;"class="grand">
-		        	<span>足球战报</span><span>评论2</span>
-		        </p>
-		    </div>
-		</div>                
     </div>
     <div class="weui-loadmore" id="load">
         <i class="weui-loading"></i>
