--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <body>
     <div id="header"></div>
     <div id="index_page_conent">
-
         <div class="index_page">
             <div class="myswiper">
                 <div class="swiper-container">
@@ -29,7 +28,7 @@
                     <div class="swiper-pagination"></div>
                 </div>
             </div>
-            <div class="weui-cell">
+            <div class="weui-cell" onclick="goDetails()">
                 <div class="weui-cell__hd" style="position: relative;margin-right: 10px;">
                     <img src="img/test.jpg" style="width: 80px;display: block">
                 </div>
@@ -40,7 +39,7 @@
                     </p>
                 </div>
             </div>
-            <div class="weui-cell">
+            <div class="weui-cell" onclick="goDetails()">
                 <div class="weui-cell__hd" style="position: relative;margin-right: 10px;">
                     <img src="img/test.jpg" style="width: 80px;display: block">
                 </div>
@@ -51,7 +50,7 @@
                     </p>
                 </div>
             </div>
-            <div class="weui-cell">
+            <div class="weui-cell" onclick="goDetails()">
                 <div class="weui-cell__hd" style="position: relative;margin-right: 10px;">
                     <img src="img/test.jpg" style="width: 80px;display: block">
                 </div>
@@ -62,7 +61,7 @@
                     </p>
                 </div>
             </div>
-            <div class="weui-cell">
+            <div class="weui-cell" onclick="goDetails()">
                 <div class="weui-cell__hd" style="position: relative;margin-right: 10px;">
                     <img src="img/test.jpg" style="width: 80px;display: block">
                 </div>
@@ -73,7 +72,7 @@
                     </p>
                 </div>
             </div>
-            <div class="weui-cell">
+            <div class="weui-cell" onclick="goDetails()">
                 <div class="weui-cell__hd" style="position: relative;margin-right: 10px;">
                     <img src="img/test.jpg" style="width: 80px;display: block">
                 </div>
@@ -84,7 +83,7 @@
                     </p>
                 </div>
             </div>
-            <div class="weui-cell">
+            <div class="weui-cell" onclick="goDetails()">
                 <div class="weui-cell__hd" style="position: relative;margin-right: 10px;">
                     <img src="img/test.jpg" style="width: 80px;display: block">
                 </div>
