--- a/ranking.html
+++ b/ranking.html
@@ -35,12 +35,32 @@
             <div class="col-xs-2">98/100</div>
             <div class="col-xs-3">　99.99%</div>
         </div>
-        <div class="row ranking_my_list">
-            <div class="col-xs-2 my-text-center" >100</div>
-            <div class="col-xs-4" style="padding: 0;"><img class="my_top_img" src="img/my_top.png"/>胜率排行</div>
-            <div class="col-xs-2">98/100</div>
-            <div class="col-xs-3">　99.99%</div>
-        </div>   
+        <div class="ranking_list">
+            <div class="row ranking_my_list">
+                <div class="col-xs-2 my-text-center" >100</div>
+                <div class="col-xs-4" style="padding: 0;"><img class="my_top_img" src="img/my_top.png"/>胜率排行</div>
+                <div class="col-xs-2">98/100</div>
+                <div class="col-xs-3">　99.99%</div>
+            </div>
+            <div class="row ranking_my_list">
+                <div class="col-xs-2 my-text-center" >100</div>
+                <div class="col-xs-4" style="padding: 0;"><img class="my_top_img" src="img/my_top.png"/>胜率排行</div>
+                <div class="col-xs-2">98/100</div>
+                <div class="col-xs-3">　99.99%</div>
+            </div>             
+            <div class="row ranking_my_list">
+                <div class="col-xs-2 my-text-center" >100</div>
+                <div class="col-xs-4" style="padding: 0;"><img class="my_top_img" src="img/my_top.png"/>胜率排行</div>
+                <div class="col-xs-2">98/100</div>
+                <div class="col-xs-3">　99.99%</div>
+            </div>
+            <div class="row ranking_my_list">
+                <div class="col-xs-2 my-text-center" >100</div>
+                <div class="col-xs-4" style="padding: 0;"><img class="my_top_img" src="img/my_top.png"/>胜率排行</div>
+                <div class="col-xs-2">98/100</div>
+                <div class="col-xs-3">　99.99%</div>
+            </div>
+        </div>
     </div>
 
     <div id="integral">
@@ -59,7 +79,17 @@
                 <div class="col-xs-2 my-text-center">1</div>
                 <div class="col-xs-7"><img class="my_top_img" src="img/my_top.png"/>积分排行</div>
                 <div class="col-xs-3">123</div>
-            </div> 
+            </div>
+            <div class="row ranking_my_list">
+                <div class="col-xs-2 my-text-center">1</div>
+                <div class="col-xs-7"><img class="my_top_img" src="img/my_top.png"/>积分排行</div>
+                <div class="col-xs-3">123</div>
+            </div>
+             <div class="row ranking_my_list">
+                <div class="col-xs-2 my-text-center">1</div>
+                <div class="col-xs-7"><img class="my_top_img" src="img/my_top.png"/>积分排行</div>
+                <div class="col-xs-3">123</div>
+            </div>                       
         </div>
     </div>
 
