--- a/pkend.html
+++ b/pkend.html
@@ -15,7 +15,7 @@
     <div id="pkend_header">
         <div id="pkend_header_left"><img src="img/left.png" onclick="goBackClick()"/></div>
         <ul>
-            <li class="pkend_guo"　style="padding-left:10px;"><img src="img/guo1.png"/></li>
+            <li class="pkend_guo"><img src="img/guo1.png"/></li>
             <li class="pkend_text">
                 <div class="pkend_results">
                     <p class="pkend_top_text">世界杯 A组</p>
