--- a/quiz.html
+++ b/quiz.html
@@ -12,20 +12,28 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/quiz.css" />
 </head>
 <body>
-    <div id="otherheader"></div>
+    <div id="otherheader" ></div>
+    <div id="quiz_header">
+        <div id="header_top">
+            <div id="header_img">
+                <a href="###"><img src="img/user_light.png"/></a>
+            </div>
+            <span style="color: #fff;">赛事</span>
+        </div>
+    </div>
     <div id="quiz_top">
         <div class="quiz_top_group">
             <img class="media-object" src="img/user_img.png" alt="...">
         </div>
-        <div class="quiz_top_group">
+        <div class="quiz_top_group" style="margin-left:10px;">
             <h4 class="my_username">羊羊羊</h4>
             <p class="my_lv">LvO</p>
         </div>
-        <div class="fr" style="margin-right:15px">
+        <div class="fr" style="margin-right:15px;margin-top:3px">
             <div id="quiz_top_right">
                 <img src="img/momey.png">
                 <span>0</span>
-                <img src="img/add.png">
+                <img style="width:28px" src="img/add.png">
             </div>            
         </div>
         <!-- <div class="row">
@@ -62,64 +70,66 @@
             <div class="swiper-pagination"></div>
         </div>
     </div>
-    <div id="quiz_nav" >
-        <div class="slide-box">
-                <div class="slide-item">世界杯</div>
-                <div class="slide-item">欧冠</div>
-                <div class="slide-item">亚冠</div>
-                <div class="slide-item">意甲</div>
-                <div class="slide-item">英超</div>
-                <div class="slide-item">世界杯</div>
-                <div class="slide-item">欧冠</div>
-                <div class="slide-item">亚冠</div>
-                <div class="slide-item">意甲</div>
-                <div class="slide-item">英超</div> 
-                <div class="slide-item">欧冠</div>
-                <div class="slide-item">亚冠</div>
-                <div class="slide-item">意甲</div>
-                <div class="slide-item">英超</div>                
-        </div>
-    </div>
-    <div class="pk_content">
-        <div class="pk_time">
-            2018年6月10日 星期天
-        </div>
-        <div class="pk">
-            <div class="pk_top">
-                <span>世界杯 A组 23：00</span>
-                <a href="pkend.html" class="pk_but">对战</a>
+    <div id="pk_page" style="padding-bottom:80px;">
+        <div id="quiz_nav" >
+            <div class="slide-box">
+                    <div class="slide-item"><span>世界杯</span></div>
+                    <div class="slide-item"><span>欧冠</span></div>
+                    <div class="slide-item"><span>亚冠</span></div>
+                    <div class="slide-item"><span>意甲</span></div>
+                    <div class="slide-item"><span>英超</span></div>
+                    <div class="slide-item"><span>世界杯</span></div>
+                    <div class="slide-item"><span>欧冠</span></div>
+                    <div class="slide-item"><span>亚冠</span></div>
+                    <div class="slide-item"><span>意甲</span></div>
+                    <div class="slide-item"><span>英超</span></div> 
+                    <div class="slide-item"><span>欧冠</span></div>
+                    <div class="slide-item"><span>亚冠</span></div>
+                    <div class="slide-item"><span>意甲</span></div>
+                    <div class="slide-item"><span>英超</span></div>                
             </div>
-            <div class="pk_countries">
-                <span>俄国</span>
-                <img class="pk_countries_guoone" src="img/guo1.png">
-                <img class="pk_countries_pk_img" src="img/pk_guo.png">
-                <img class="pk_countries_guotwo" src="img/guo2.png">
-                <span>沙特</span>
-            </div>
-            <div class="pk_state">已结束</div>
         </div>
-    </div>
-
-    <div class="pk_content">
-        <div class="pk_time">
-            2018年6月10日 星期天
-        </div>
-        <div class="pk">
-            <div class="pk_top">
-                <span>世界杯 A组 23：00</span>
-                <a href="pkstart.html" class="pk_but">对战</a>
+        <div class="pk_content_body">
+            <div class="pk_content">
+                <div class="pk_time">
+                    2018年6月10日 星期天
+                </div>
+                <div class="pk">
+                    <div class="pk_top">
+                        <span>世界杯 A组 23：00</span>
+                        <a href="pkend.html" class="pk_but">对战</a>
+                    </div>
+                    <div class="pk_countries">
+                        <span>俄国</span>
+                        <img class="pk_countries_guoone" src="img/guo1.png">
+                        <img class="pk_countries_pk_img" src="img/pk_guo.png">
+                        <img class="pk_countries_guotwo" src="img/guo2.png">
+                        <span>沙特</span>
+                    </div>
+                    <div class="pk_state">已结束</div>
+                </div>
             </div>
-            <div class="pk_countries">
-                <span>俄国</span>
-                <img class="pk_countries_guoone" src="img/guo1.png">
-                <img class="pk_countries_pk_img" src="img/pk_guo.png">
-                <img class="pk_countries_guotwo" src="img/guo2.png">
-                <span>沙特</span>
+            <div class="pk_content">
+                <div class="pk_time">
+                    2018年6月10日 星期天
+                </div>
+                <div class="pk">
+                    <div class="pk_top">
+                        <span>世界杯 A组 23：00</span>
+                        <a href="pkstart.html" class="pk_but">对战</a>
+                    </div>
+                    <div class="pk_countries">
+                        <span>俄国</span>
+                        <img class="pk_countries_guoone" src="img/guo1.png">
+                        <img class="pk_countries_pk_img" src="img/pk_guo.png">
+                        <img class="pk_countries_guotwo" src="img/guo2.png">
+                        <span>沙特</span>
+                    </div>
+                    <div class="pk_state">未结束</div>
+                </div>
             </div>
-            <div class="pk_state">已结束</div>
         </div>
-    </div>
-
+    </div>	
     <div id="footer">
     </div>
 </body>
