--- a/quiz.html
+++ b/quiz.html
@@ -13,14 +13,14 @@
 </head>
 <body>
     <div id="otherheader" ></div>
-    <div id="quiz_header">
+    <!-- <div id="quiz_header">
         <div id="header_top">
             <div id="header_img">
                 <a href="###"><img src="img/user_light.png"/></a>
             </div>
             <span style="color: #fff;">赛事</span>
         </div>
-    </div>
+    </div> -->
     <div id="quiz_top">
         <div class="quiz_top_group">
             <img class="media-object" src="img/user_img.png" alt="...">
@@ -94,10 +94,11 @@
                 <div class="pk_time">
                     2018年6月10日 星期天
                 </div>
+                <a href="pkend.html">
                 <div class="pk">
                     <div class="pk_top">
                         <span>世界杯 A组 23：00</span>
-                        <a href="pkend.html" class="pk_but">对战</a>
+                        <span  class="pk_but">对战</span>
                     </div>
                     <div class="pk_countries">
                         <span>俄国</span>
@@ -108,15 +109,17 @@
                     </div>
                     <div class="pk_state">已结束</div>
                 </div>
+            </a>
             </div>
             <div class="pk_content">
                 <div class="pk_time">
                     2018年6月10日 星期天
                 </div>
+                <a href="pkstart.html">
                 <div class="pk">
                     <div class="pk_top">
                         <span>世界杯 A组 23：00</span>
-                        <a href="pkstart.html" class="pk_but">对战</a>
+                        <span>对战</span>
                     </div>
                     <div class="pk_countries">
                         <span>俄国</span>
@@ -127,6 +130,7 @@
                     </div>
                     <div class="pk_state">未结束</div>
                 </div>
+            </a>
             </div>
         </div>
     </div>	
