--- a/ranking.html
+++ b/ranking.html
@@ -29,7 +29,7 @@
             <div class="col-xs-3">　胜/总</div>
             <div class="col-xs-4">近30天胜率</div>
         </div>
-        <div class="row ranking_my_list">
+        <div class="row ranking_my_list" style="border: none">
             <div class="col-xs-2 my-text-center" >100</div>
             <div class="col-xs-4" style="padding: 0;"><img class="my_top_img" src="img/my_top.png"/>胜率排行</div>
             <div class="col-xs-2">98/100</div>
@@ -69,7 +69,7 @@
             <div class="col-xs-7">玩家</div>
             <div class="col-xs-3">积分</div>
         </div>
-        <div class="row ranking_my_list">
+        <div class="row ranking_my_list" style="border: none">
             <div class="col-xs-2 my-text-center">1</div>
             <div class="col-xs-7"><img class="my_top_img" src="img/my_top.png"/>积分排行</div>
             <div class="col-xs-3">123</div>
