--- a/pkstart.html
+++ b/pkstart.html
@@ -27,7 +27,7 @@
         <div style="clear: both;"></div>
         <div id="pk_name">
             <div class="pk_name_lfet">俄国</div>
-            <span>未结束</span>
+            <img src="img/my_pktiem.png" style="width: 17px;margin-right: 2px"><span>未结束</span>
             <div class="pk_name_right">沙特</div>
         </div>
     </div>
