--- a/quiz.html
+++ b/quiz.html
@@ -119,7 +119,7 @@
                 <div class="pk">
                     <div class="pk_top">
                         <span>世界杯 A组 23：00</span>
-                        <span>对战</span>
+                        <span class="pk_but">对战</span>
                     </div>
                     <div class="pk_countries">
                         <span>俄国</span>
