--- a/pkstart.html
+++ b/pkstart.html
@@ -27,7 +27,7 @@
         <div style="clear: both;"></div>
         <div id="pk_name">
             <div class="pk_name_lfet">俄国</div>
-            <img src="img/my_pktiem.png" style="width: 14px;margin-right: 2px"><span>未结束</span>
+            <img src="img/my_pktiem.png" style="width: 14px;margin-right: 2px"><span>23：00</span>
             <div class="pk_name_right">沙特</div>
         </div>
     </div>
@@ -81,7 +81,7 @@
         <div id="pkstart_list">
             <div class="media">
                 <div class="media-left media-middle" >
-                    <div class="my_media_img"><img class="media-object" src="img/pk_current.png" alt="..." style="width: 30px;margin: 0 auto"></div>
+                    <div class="my_media_img"><img class="media-object" src="img/pk_current.png" alt="..." style="width: 38px;margin: 0 auto"></div>
                 </div>
                 <div class="media-body">
                     <h4 class="my_meia_titel my-font-bold"> 当前奖池</h4>
@@ -91,7 +91,7 @@
            
             <div class="media">
                 <div class="media-left media-middle" >
-                    <div class="my_media_img"><img class="media-object" src="img/time.png" alt="..." style="width: 30px;margin: 0 auto"></div>
+                    <div class="my_media_img"><img class="media-object" src="img/time.png" alt="..." style="width: 38px;margin: 0 auto"></div>
                 </div>
                 <div class="media-body">
                     <h4 class="my_meia_titel my-font-bold">
@@ -107,7 +107,7 @@
 
             <div class="media">
                 <div class="media-left media-middle" >
-                    <div class="my_media_img"><img class="media-object" src="img/canyu.png" alt="..." style="width: 30px;margin: 0 auto"></div>
+                    <div class="my_media_img"><img class="media-object" src="img/canyu.png" alt="..." style="width: 38px;margin: 0 auto"></div>
                 </div>
                 <div class="media-body">
                     <h4 class="my_meia_titel">
